--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,8 +3,8 @@ project:
   output-dir: docs
 
 book:
-  title: "[STUDENT/GROUP NAME] Progress Journal"
-  repo-url: https://github.com/pjournal/gh-pages-quarto-template
+  title: "Honey Drip Progress Journal"
+  repo-url: https://github.com/pjournal/mef06g-honey-drip
   chapters:
     - index.qmd
     - assignment1.qmd
