--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,7 @@ book:
     - preprocessing.qmd
     - ExploratoryDataAnalysis.qmd
     - finalreport.qmd
+    - shinyapp.qmd
   page-footer: 
     center: "[MEF BDA 503](https://mef-bda503.github.io)" 
   sharing: [twitter, facebook]
